--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "4.13.1",
+    "@ericblade/quagga2": "1.8.4",
     "@sveltejs/adapter-static": "3.0.8",
     "@sveltejs/kit": "2.21.0",
     "@sveltejs/vite-plugin-svelte": "5.0.3",
     "@vitejs/plugin-basic-ssl": "2.0.0",
+    "quagga2-reader-qr": "1.1.0",
     "svelte": "5.30.2",
     "svelte-check": "4.2.1",
     "typescript": "5.8.3",
