--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "4.13.1",
-    "@sveltejs/adapter-auto": "6.0.1",
+    "@sveltejs/adapter-static": "3.0.8",
     "@sveltejs/kit": "2.21.0",
     "@sveltejs/vite-plugin-svelte": "5.0.3",
     "@vitejs/plugin-basic-ssl": "2.0.0",
