--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/bun": "1.2.13",
     "@types/he": "1.2.3",
     "@types/node": "22.15.18",
+    "@types/youtube-player": "5.5.11",
     "@unocss/eslint-plugin": "66.1.2",
     "@unocss/reset": "66.1.2",
     "@unocss/svelte-scoped": "66.1.2",
@@ -35,6 +36,7 @@
     "typescript": "5.8.3",
     "unocss": "66.1.2",
     "vite": "6.3.5",
+    "youtube-player": "5.6.0",
     "ytmusic-api": "5.3.0"
   }
 }
