--- a/package.json
+++ b/package.json
@@ -16,14 +16,21 @@
   "devDependencies": {
     "@antfu/eslint-config": "4.13.1",
     "@ericblade/quagga2": "1.8.4",
+    "@sindresorhus/transliterate": "1.6.0",
     "@sveltejs/adapter-static": "3.0.8",
     "@sveltejs/kit": "2.21.0",
     "@sveltejs/vite-plugin-svelte": "5.0.3",
+    "@types/bun": "1.2.13",
+    "@types/he": "1.2.3",
+    "@types/node": "22.15.18",
     "@vitejs/plugin-basic-ssl": "2.0.0",
+    "he": "1.2.0",
     "quagga2-reader-qr": "1.1.0",
     "svelte": "5.30.2",
     "svelte-check": "4.2.1",
+    "ts-retry": "6.0.0",
     "typescript": "5.8.3",
-    "vite": "6.3.5"
+    "vite": "6.3.5",
+    "ytmusic-api": "5.3.0"
   }
 }
