--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "@types/bun": "1.2.13",
     "@types/he": "1.2.3",
     "@types/node": "22.15.18",
+    "@unocss/eslint-plugin": "66.1.2",
+    "@unocss/reset": "66.1.2",
+    "@unocss/svelte-scoped": "66.1.2",
     "@vitejs/plugin-basic-ssl": "2.0.0",
     "he": "1.2.0",
     "quagga2-reader-qr": "1.1.0",
@@ -30,6 +33,7 @@
     "svelte-check": "4.2.1",
     "ts-retry": "6.0.0",
     "typescript": "5.8.3",
+    "unocss": "66.1.2",
     "vite": "6.3.5",
     "ytmusic-api": "5.3.0"
   }
